Fix alignment of Contact Info section on mobile

--- a/src/page-assets/contact-me/styles/contact-me.sass
+++ b/src/page-assets/contact-me/styles/contact-me.sass
@@ -45,8 +45,21 @@
     text-decoration: underline
     margin-left: 0
 
+@mixin contact-icons
+  @media screen and (max-width: $mobile-portrait)
+    width: 40px
+    height: 40px
+    margin-right: 20px
+
+.email-icon
+  @include contact-icons()
+
 .phone-icon
   width: 80px
+  @include contact-icons()
 
 .linked-in-logo
   width: 80px
+  @include contact-icons()
+  @media screen and (max-width: $mobile-portrait)
+    height: auto
